--- a/GoPro_Web_RC.html
+++ b/GoPro_Web_RC.html
@@ -2,9 +2,7 @@
 <html lang="en">
 
 <!--
-    Author: sepp89117
-    Version: 1.3
-    Date: 2023-05-28
+    Version: 1.4.0-kix
 -->
 
 <head>
@@ -377,6 +375,7 @@
     var defInfoUUID = "0000180a-0000-1000-8000-00805f9b34fb";  // Device information
     var battInfoUUID = "0000180f-0000-1000-8000-00805f9b34fb"; // Battery service
     // Custom GoPro characteristics
+    var networkUUID = "b5f90091-aa8d-11e3-9046-0002a5d5c51b";       // Command [WRITE]
     var commandUUID = "b5f90072-aa8d-11e3-9046-0002a5d5c51b";       // Command [WRITE]
     var commandRespUUID = "b5f90073-aa8d-11e3-9046-0002a5d5c51b";   // Command response [NOTIFY]
     var settingsUUID = "b5f90074-aa8d-11e3-9046-0002a5d5c51b";      // Settings [WRITE]
@@ -420,6 +419,7 @@
 
     // TODO get all GoPro model IDs
     var gopro_models = {
+        62: "Hero 12",
         60: "Hero 11 Black Mini",
         58: "Hero 11 Black",
         57: "Hero 10 Black",
