add visible version

--- a/GoPro_Web_RC.html
+++ b/GoPro_Web_RC.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--
-    Version: 1.4.0-kix
--->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -220,7 +217,7 @@
 
 <body>
     <div style="display: flex; justify-content: space-between;">
-        <b class="h2">GoPro Web RC</b>
+        <b class="h2">GoPro Web RC</b><b class="h2">  v1.4.0-kix.1</b>
         <input type="button" onclick="onClickPair();" value="Connect/Pair new"
             style="height: fit-content;margin-top: 15px;">
     </div>
