--- a/GoPro_Web_RC.html
+++ b/GoPro_Web_RC.html
@@ -236,9 +236,9 @@
     <fieldset class="foldable">
         <legend style="text-align: left;" onclick="this.parentNode.classList.toggle('expanded');"><b>Protobuf Commands</b></legend>
         <div style="display:inline-block;">
-            <input type="button" onclick="sendNetw(protoStartScan); sendNetw(encodeBLE(protoRequestConnectT()))"
+            <input type="button" onclick="sendNetw(protoStartScan); sendNetw(protoRequestConnectT())"
                     value="Connect Stored WIFI">
-            <input type="button" onclick="sendCommand(encodeBLE(protoLiveStreamT()));"
+            <input type="button" onclick="sendCommand(protoLiveStreamT());"
                 value="Start Live Stream"><br>
             <p>WIFI:</p> <p id="wifi_id" contenteditable="true">net_id</p>  <p>MBPS:</p>  <p id="mbps_id" contenteditable="true">8000</p> <br>
             <p>RTMP:</p> <p id="rtmp_id" contenteditable="true">rtmp://192.168.0.1/</p><br>
@@ -438,7 +438,7 @@
         //ssid
         var ssid = document.getElementById("wifi_id").innerText
         var command = [header, protobufFromString(ssid)].flat();
-        return command;
+        return encodeBLE(command);
     }
     var streamProtobuf
     var protoLiveStreamT = function() {
@@ -462,7 +462,7 @@
         var buffer = RequestSetLiveStreamMode.encode(RequestSetLiveStreamMode.create(payload)).finish();
         var command = [header, Array.from(buffer)].flat();
 
-        return command;
+        return encodeBLE(command);
     }
 
     function protobufFromString(str) {
@@ -850,10 +850,13 @@
             });
     }
 
+    const chunk = (a,n)=>[...Array(Math.ceil(a.length/n))].map((_,i)=>a.slice(n*i,n+n*i));
+
     function sendCommand(command) {
-        for (var i = 0; i < connectedDevs.length; i++) {
-            bufferBtAction(sendCommandToSingle, [command, i]);
-        }
+        for (subCmd of chunk(command, 20))
+            for (var i = 0; i < connectedDevs.length; i++) {
+                bufferBtAction(sendCommandToSingle, [subCmd, i]);
+            }
     }
 
     function sendCommandToSingle(args) {
@@ -877,9 +880,10 @@
     }
 
     function sendNetw(command) {
-        for (var i = 0; i < connectedDevs.length; i++) {
-            bufferBtAction(sendNetwToSingle, [command, i]);
-        }
+        for (subCmd of chunk(command, 20))
+            for (var i = 0; i < connectedDevs.length; i++) {
+                bufferBtAction(sendNetwToSingle, [subCmd, i]);
+            }
     }
 
     function sendNetwToSingle(args) {
